# mcp-ltspice-qucs

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  question.yml
.github/workflows/: ci.yml  docs.yml
docs/: getting-started.md  index.md  installation.md  related-mcp-servers.md  suite-architecture.md  tool-catalog.md  usage.md
docs/examples/: basic-lpf.md  halow-lpf.md  index.md
docs/reference/: e-series.md  envelope.md  touchstone.md
docs/tools/: ltspice.md  qucs-s.md  rf-analysis.md
examples/basic_lpf/: README.md  basic_lpf.s2p  design.py  spec.json
examples/buck_smps/: README.md  design.py  report.md
examples/emc_compliance/: README.md  design.py  report.md
examples/filter_compare/: README.md  order5_final.s2p  order7_final.s2p  order9_final.s2p  report.md  run.py  spec.json
examples/halow_lpf/: README.md  after_zero_placement.s2p  design.py  final.asc  final.s2p  report.md  spec.json  starting_point.s2p  with_real_parts.s2p
examples/opamp_filter/: README.md  design.py  report.md
presentation/: OVERVIEW.docx  OVERVIEW.md  OVERVIEW.pptx  README.md  build_charts.py  build_pptx.py
presentation/assets/: demo1_1ghz_lpf.asc  demo1_1ghz_lpf.s2p
scripts/: gen_tool_catalog.py  render_all_s2p.py  render_all_schematics.py  render_logo.py
tasks/: lessons.md  todo.md
tests/: test_workspace_smoke.py
