[project]
name = "mcp-ltspice-qucs-workspace"
version = "0.0.0"
description = "RF engineering MCP suite: LTspice, Qucs-S, and analysis servers (workspace root)"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "Adam Engelbrecht", email = "adam.engelbrecht76@gmail.com" }]

[tool.uv.workspace]
members = [
    "packages/rf-mcp-common",
    "packages/mcp-ltspice",
    "packages/mcp-rf-analysis",
    "packages/mcp-qucs-s",
]

[tool.uv.sources]
rf-mcp-common = { workspace = true }
mcp-ltspice = { workspace = true }
mcp-rf-analysis = { workspace = true }
mcp-qucs-s = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.112.0",
    "pre-commit>=3.8.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = [
    "packages/rf-mcp-common/src",
    "packages/mcp-ltspice/src",
    "packages/mcp-rf-analysis/src",
    "packages/mcp-qucs-s/src",
]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "SIM",      # simplify
    "RUF",      # ruff-specific
    "C4",       # comprehensions
    "PIE",      # pie
    "PT",       # pytest
    "RET",      # return
    "TID",      # tidy-imports
]
ignore = [
    "E501",     # line length (formatter handles)
    "B008",     # FastMCP uses Pydantic Field defaults in signatures
    "RUF001",   # ambiguous unicode chars (math symbols × σ – are intentional)
    "RUF002",
    "RUF003",
    "SIM108",   # ternaries aren't always more readable than if/else blocks
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["B011", "S101", "PT011", "PT018", "ARG001"]
"examples/**/*.py" = ["T201"]  # print() in scripts is fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
namespace_packages = true
explicit_package_bases = true
# Each package ships its own tests/conftest.py; without this mypy aborts with
# "Duplicate module named conftest" before checking a single source file.
exclude = ['packages/.*/tests/.*']
# mypy was effectively disabled until v0.4.1 (it aborted on the conftest clash
# above, and CI masked that with `|| true`). Turning it on surfaced ~190 errors.
# We enforce type *correctness* now — anything that indicates a real defect —
# and defer type *completeness* (annotating every numpy return and generic
# parameter) to a ratchet (issue #37). Do not add codes here to silence a new
# error. no-untyped-def has been retired from this list — every internal helper
# is now annotated.
disable_error_code = [
    "no-any-return",    # numpy/pandas returns widened to Any
    "type-arg",         # bare `dict`/`list`/`ndarray` generics
    "no-untyped-call",  # calls into untyped third-party (matplotlib, schemdraw)
]
mypy_path = [
    "packages/rf-mcp-common/src",
    "packages/mcp-ltspice/src",
    "packages/mcp-rf-analysis/src",
    "packages/mcp-qucs-s/src",
]

[[tool.mypy.overrides]]
module = ["spicelib.*", "skrf.*", "scipy.*", "joblib.*", "schemdraw.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = [
    "tests",
    "packages/rf-mcp-common/tests",
    "packages/mcp-ltspice/tests",
    "packages/mcp-rf-analysis/tests",
    "packages/mcp-qucs-s/tests",
]
markers = [
    "integration: end-to-end tests that invoke a real simulator",
    "ltspice: requires LTspice via Wine",
    "ngspice: requires ngspice on PATH",
    "qucs: requires qucs-s on PATH",
    "xyce: requires Xyce on PATH",
    "slow: tests that take >5s",
]

[tool.coverage.run]
source = ["packages"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
